LTSASharp/Parsing/FSPActualParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.2.2-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from E:\Projects\C#\LTSASharp\LTSASharp\Parsing\FSPActual.g4 by ANTLR 4.2.2-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace LTSASharp.Parsing {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.2.2-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class FSPActualParser : Parser {
	public const int
		Dot=1, DotDot=2, LSquare=3, RSquare=4, Colon=5, LCurly=6, RCurly=7, Comma=8, 
		Equal=9, Plus=10, LRound=11, RRound=12, Or=13, Arrow=14, Semicolon=15, 
		OrOr=16, ColonColon=17, GtGt=18, LtLt=19, Divide=20, AndAnd=21, Hat=22, 
		And=23, EqualEqual=24, NotEqual=25, Lt=26, LtEqual=27, Gt=28, GtEqual=29, 
		Minus=30, Star=31, Modulo=32, Not=33, Quote=34, Hash=35, At=36, BackSlash=37, 
		Equiv=38, Eventually=39, Always=40, Const=41, Range=42, Set=43, If=44, 
		Then=45, Else=46, When=47, ForAll=48, Property=49, Progress=50, Menu=51, 
		Fluent=52, Initially=53, Assert=54, Exists=55, Rigid=56, Minimal=57, Compose=58, 
		UpperCaseIdentifier=59, LowerCaseIdentifier=60, IntegerLiteral=61, Whitespace=62, 
		SingleComment=63, MultiComment=64;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'.'", "'..'", "'['", "']'", "':'", "'{'", "'}'", "','", 
		"'='", "'+'", "'('", "')'", "'|'", "'->'", "';'", "'||'", "'::'", "'>>'", 
		"'<<'", "'/'", "'&&'", "'^'", "'&'", "'=='", "'!='", "'<'", "'<='", "'>'", 
		"'>='", "'-'", "'*'", "'%'", "'!'", "'''", "'#'", "'@'", "'\\'", "'<->'", 
		"'<>'", "'[]'", "'const'", "'range'", "'set'", "'if'", "'then'", "'else'", 
		"'when'", "'forall'", "'property'", "'progress'", "'menu'", "'fluent'", 
		"'initially'", "'assert'", "'exists'", "'rigid'", "'minimal'", "'compose'", 
		"UpperCaseIdentifier", "LowerCaseIdentifier", "IntegerLiteral", "Whitespace", 
		"SingleComment", "MultiComment"
	};
	public const int
		RULE_fsp_description = 0, RULE_fsp_definition = 1, RULE_actionLabel = 2, 
		RULE_actionLabelTail = 3, RULE_actionLabels = 4, RULE_actionLabelsTail = 5, 
		RULE_actionRange = 6, RULE_range = 7, RULE_set = 8, RULE_setElements = 9, 
		RULE_constantDef = 10, RULE_rangeDef = 11, RULE_setDef = 12, RULE_processDef = 13, 
		RULE_processBody = 14, RULE_localProcessDefs = 15, RULE_localProcessDef = 16, 
		RULE_alphabetExtension = 17, RULE_localProcess = 18, RULE_baseLocalProcess = 19, 
		RULE_choice = 20, RULE_actionPrefix = 21, RULE_guard = 22, RULE_indices = 23, 
		RULE_indexRanges = 24, RULE_sequentialComposition = 25, RULE_seqProcessList = 26, 
		RULE_processRef = 27, RULE_argument = 28, RULE_argumentList = 29, RULE_compositeDef = 30, 
		RULE_compositeBody = 31, RULE_prefixLabel = 32, RULE_parallelComposition = 33, 
		RULE_priority = 34, RULE_ranges = 35, RULE_param = 36, RULE_parameterList = 37, 
		RULE_parameter = 38, RULE_relabel = 39, RULE_relabelDefs = 40, RULE_relabelDef = 41, 
		RULE_hiding = 42, RULE_propertyDef = 43, RULE_progressDef = 44, RULE_menuDef = 45, 
		RULE_simpleExpression = 46, RULE_expression = 47, RULE_orExpr = 48, RULE_andExpr = 49, 
		RULE_bitOrExpr = 50, RULE_bitExclOrExpr = 51, RULE_bitAndExpr = 52, RULE_equalityExpr = 53, 
		RULE_relationalExpr = 54, RULE_shiftExpr = 55, RULE_additiveExpr = 56, 
		RULE_multiplicativeExpr = 57, RULE_unaryExpr = 58, RULE_baseExpr = 59, 
		RULE_fluentDef = 60, RULE_initially = 61, RULE_assertDef = 62, RULE_fltl_or = 63, 
		RULE_fltl_binary = 64, RULE_fltl_and = 65, RULE_fltl_unary = 66, RULE_fltl_base = 67;
	public static readonly string[] ruleNames = {
		"fsp_description", "fsp_definition", "actionLabel", "actionLabelTail", 
		"actionLabels", "actionLabelsTail", "actionRange", "range", "set", "setElements", 
		"constantDef", "rangeDef", "setDef", "processDef", "processBody", "localProcessDefs", 
		"localProcessDef", "alphabetExtension", "localProcess", "baseLocalProcess", 
		"choice", "actionPrefix", "guard", "indices", "indexRanges", "sequentialComposition", 
		"seqProcessList", "processRef", "argument", "argumentList", "compositeDef", 
		"compositeBody", "prefixLabel", "parallelComposition", "priority", "ranges", 
		"param", "parameterList", "parameter", "relabel", "relabelDefs", "relabelDef", 
		"hiding", "propertyDef", "progressDef", "menuDef", "simpleExpression", 
		"expression", "orExpr", "andExpr", "bitOrExpr", "bitExclOrExpr", "bitAndExpr", 
		"equalityExpr", "relationalExpr", "shiftExpr", "additiveExpr", "multiplicativeExpr", 
		"unaryExpr", "baseExpr", "fluentDef", "initially", "assertDef", "fltl_or", 
		"fltl_binary", "fltl_and", "fltl_unary", "fltl_base"
	};

	public override string GrammarFileName { get { return "FSPActual.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public FSPActualParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Fsp_descriptionContext : ParserRuleContext {
		public Fsp_definitionContext fsp_definition(int i) {
			return GetRuleContext<Fsp_definitionContext>(i);
		}
		public IReadOnlyList<Fsp_definitionContext> fsp_definition() {
			return GetRuleContexts<Fsp_definitionContext>();
		}
		public Fsp_descriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_fsp_description; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterFsp_description(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitFsp_description(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFsp_description(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fsp_descriptionContext fsp_description() {
		Fsp_descriptionContext _localctx = new Fsp_descriptionContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_fsp_description);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 136; fsp_definition();
				}
				}
				State = 139;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OrOr) | (1L << Const) | (1L << Range) | (1L << Set) | (1L << Property) | (1L << Progress) | (1L << Menu) | (1L << Fluent) | (1L << Assert) | (1L << UpperCaseIdentifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Fsp_definitionContext : ParserRuleContext {
		public FluentDefContext fluentDef() {
			return GetRuleContext<FluentDefContext>(0);
		}
		public ProgressDefContext progressDef() {
			return GetRuleContext<ProgressDefContext>(0);
		}
		public PropertyDefContext propertyDef() {
			return GetRuleContext<PropertyDefContext>(0);
		}
		public CompositeDefContext compositeDef() {
			return GetRuleContext<CompositeDefContext>(0);
		}
		public ProcessDefContext processDef() {
			return GetRuleContext<ProcessDefContext>(0);
		}
		public RangeDefContext rangeDef() {
			return GetRuleContext<RangeDefContext>(0);
		}
		public AssertDefContext assertDef() {
			return GetRuleContext<AssertDefContext>(0);
		}
		public ConstantDefContext constantDef() {
			return GetRuleContext<ConstantDefContext>(0);
		}
		public SetDefContext setDef() {
			return GetRuleContext<SetDefContext>(0);
		}
		public MenuDefContext menuDef() {
			return GetRuleContext<MenuDefContext>(0);
		}
		public Fsp_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_fsp_definition; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterFsp_definition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitFsp_definition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFsp_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fsp_definitionContext fsp_definition() {
		Fsp_definitionContext _localctx = new Fsp_definitionContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_fsp_definition);
		try {
			State = 151;
			switch (_input.La(1)) {
			case Const:
				EnterOuterAlt(_localctx, 1);
				{
				State = 141; constantDef();
				}
				break;
			case Range:
				EnterOuterAlt(_localctx, 2);
				{
				State = 142; rangeDef();
				}
				break;
			case Set:
				EnterOuterAlt(_localctx, 3);
				{
				State = 143; setDef();
				}
				break;
			case UpperCaseIdentifier:
				EnterOuterAlt(_localctx, 4);
				{
				State = 144; processDef();
				}
				break;
			case OrOr:
				EnterOuterAlt(_localctx, 5);
				{
				State = 145; compositeDef();
				}
				break;
			case Property:
				EnterOuterAlt(_localctx, 6);
				{
				State = 146; propertyDef();
				}
				break;
			case Progress:
				EnterOuterAlt(_localctx, 7);
				{
				State = 147; progressDef();
				}
				break;
			case Menu:
				EnterOuterAlt(_localctx, 8);
				{
				State = 148; menuDef();
				}
				break;
			case Fluent:
				EnterOuterAlt(_localctx, 9);
				{
				State = 149; fluentDef();
				}
				break;
			case Assert:
				EnterOuterAlt(_localctx, 10);
				{
				State = 150; assertDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionLabelContext : ParserRuleContext {
		public IReadOnlyList<ActionLabelTailContext> actionLabelTail() {
			return GetRuleContexts<ActionLabelTailContext>();
		}
		public ITerminalNode LowerCaseIdentifier() { return GetToken(FSPActualParser.LowerCaseIdentifier, 0); }
		public ITerminalNode RSquare() { return GetToken(FSPActualParser.RSquare, 0); }
		public ITerminalNode LSquare() { return GetToken(FSPActualParser.LSquare, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ActionLabelTailContext actionLabelTail(int i) {
			return GetRuleContext<ActionLabelTailContext>(i);
		}
		public ActionLabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_actionLabel; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterActionLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitActionLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionLabelContext actionLabel() {
		ActionLabelContext _localctx = new ActionLabelContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_actionLabel);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			switch (_input.La(1)) {
			case LowerCaseIdentifier:
				{
				State = 153; Match(LowerCaseIdentifier);
				}
				break;
			case LSquare:
				{
				State = 154; Match(LSquare);
				State = 155; expression();
				State = 156; Match(RSquare);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 163;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 160; actionLabelTail();
					}
					} 
				}
				State = 165;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionLabelTailContext : ParserRuleContext {
		public ITerminalNode LowerCaseIdentifier() { return GetToken(FSPActualParser.LowerCaseIdentifier, 0); }
		public ITerminalNode RSquare() { return GetToken(FSPActualParser.RSquare, 0); }
		public ITerminalNode Dot() { return GetToken(FSPActualParser.Dot, 0); }
		public ITerminalNode LSquare() { return GetToken(FSPActualParser.LSquare, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ActionLabelTailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_actionLabelTail; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterActionLabelTail(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitActionLabelTail(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionLabelTail(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionLabelTailContext actionLabelTail() {
		ActionLabelTailContext _localctx = new ActionLabelTailContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_actionLabelTail);
		try {
			State = 172;
			switch (_input.La(1)) {
			case Dot:
				EnterOuterAlt(_localctx, 1);
				{
				State = 166; Match(Dot);
				State = 167; Match(LowerCaseIdentifier);
				}
				break;
			case LSquare:
				EnterOuterAlt(_localctx, 2);
				{
				State = 168; Match(LSquare);
				State = 169; expression();
				State = 170; Match(RSquare);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionLabelsContext : ParserRuleContext {
		public IReadOnlyList<ActionLabelsTailContext> actionLabelsTail() {
			return GetRuleContexts<ActionLabelsTailContext>();
		}
		public ITerminalNode RSquare() { return GetToken(FSPActualParser.RSquare, 0); }
		public ITerminalNode LSquare() { return GetToken(FSPActualParser.LSquare, 0); }
		public ActionRangeContext actionRange() {
			return GetRuleContext<ActionRangeContext>(0);
		}
		public SetContext set() {
			return GetRuleContext<SetContext>(0);
		}
		public ActionLabelsTailContext actionLabelsTail(int i) {
			return GetRuleContext<ActionLabelsTailContext>(i);
		}
		public ActionLabelContext actionLabel() {
			return GetRuleContext<ActionLabelContext>(0);
		}
		public ActionLabelsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_actionLabels; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterActionLabels(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitActionLabels(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionLabels(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionLabelsContext actionLabels() {
		ActionLabelsContext _localctx = new ActionLabelsContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_actionLabels);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 180;
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 174; actionLabel();
				}
				break;

			case 2:
				{
				State = 175; set();
				}
				break;

			case 3:
				{
				State = 176; Match(LSquare);
				State = 177; actionRange();
				State = 178; Match(RSquare);
				}
				break;
			}
			State = 185;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 182; actionLabelsTail();
					}
					} 
				}
				State = 187;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionLabelsTailContext : ParserRuleContext {
		public ITerminalNode RSquare() { return GetToken(FSPActualParser.RSquare, 0); }
		public ITerminalNode Dot() { return GetToken(FSPActualParser.Dot, 0); }
		public ITerminalNode LSquare() { return GetToken(FSPActualParser.LSquare, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ActionRangeContext actionRange() {
			return GetRuleContext<ActionRangeContext>(0);
		}
		public SetContext set() {
			return GetRuleContext<SetContext>(0);
		}
		public ActionLabelContext actionLabel() {
			return GetRuleContext<ActionLabelContext>(0);
		}
		public ActionLabelsTailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_actionLabelsTail; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterActionLabelsTail(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitActionLabelsTail(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionLabelsTail(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionLabelsTailContext actionLabelsTail() {
		ActionLabelsTailContext _localctx = new ActionLabelsTailContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_actionLabelsTail);
		try {
			State = 200;
			switch (_input.La(1)) {
			case Dot:
				EnterOuterAlt(_localctx, 1);
				{
				State = 188; Match(Dot);
				State = 191;
				switch (_input.La(1)) {
				case LSquare:
				case LowerCaseIdentifier:
					{
					State = 189; actionLabel();
					}
					break;
				case LCurly:
				case UpperCaseIdentifier:
					{
					State = 190; set();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case LSquare:
				EnterOuterAlt(_localctx, 2);
				{
				State = 193; Match(LSquare);
				State = 196;
				switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					State = 194; actionRange();
					}
					break;

				case 2:
					{
					State = 195; expression();
					}
					break;
				}
				State = 198; Match(RSquare);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionRangeContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(FSPActualParser.Colon, 0); }
		public ITerminalNode LowerCaseIdentifier() { return GetToken(FSPActualParser.LowerCaseIdentifier, 0); }
		public RangeContext range() {
			return GetRuleContext<RangeContext>(0);
		}
		public SetContext set() {
			return GetRuleContext<SetContext>(0);
		}
		public ActionRangeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_actionRange; }
		public override void EnterRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.EnterActionRange(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSPActualListener typedListener = listener as IFSPActualListener;
			if (typedListener != null) typedListener.ExitActionRange(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSPActualVisitor<TResult> typedVisitor = visitor as IFSPActualVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionRange(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionRangeContext actionRange() {
		ActionRangeContext _localctx = new ActionRangeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_actionRange);
		try {
			State = 210;
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 202; range();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 203; set();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 204; Match(LowerCaseIdentifier);
				State = 205; Match(Colon);
				State = 206; range();
				}
				break;
